[project]
name = "graph-ops"
version = "0.1.0"
description = ""
authors = [
    {name = "Santhosh",email = "santhoshkumarkarthikeyan5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "graph", from = "src"}]

[tool.poetry.scripts]
shell = "src.shell.main:shell"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
