[project]
name = "graph-ops"
version = "0.1.0"
description = ""
authors = [
    {name = "Santhosh",email = "santhoshkumarkarthikeyan5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "asciinet (>=0.3.1,<0.4.0)"
]

[tool.poetry]
packages = [{include = "graph_ops", from = "src"}]

[tool.poetry.scripts]
shell = "graph_ops.shell:shell"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
